# system-programming

./: .gitignore  CMakeLists.txt
lab1/task1/: CMakeLists.txt  dialog.c  dialog.h  main.c  main.h  user_list.c
lab1/task2/: main.c  main.h
lab1/task3/: CMakeLists.txt  main.c  main.h
lab1/task4/: a  client.c  client.h  server.c  server.h
lab1/task5/: main.c  main.h
lab1/task6/: client.c  client.h  files  server.c  server.h
lab1/task7/: main.c
lab2/: CMakeLists.txt
lab2/task1/: CMakeLists.txt  logger.cpp  logger.h
lab2/task2/: CMakeLists.txt  analyzer.cpp  analyzer.h  generator.cpp  generator.h  ip_stats.h  main.cpp  thread_safe_queue.cpp  thread_safe_queue.h  utils.h
lab3/ipc/message_queue/include/: MessageQueue.hpp
lab3/ipc/message_queue/src/: MessageQueue.cpp
lab3/ipc/semaphore/include/: Semaphore.hpp
lab3/ipc/semaphore/src/: Semaphore.cpp
lab3/ipc/shared_memory/include/: SharedMemory.hpp
lab3/ipc/shared_memory/src/: SharedMemory.cpp
lab3/server/include/: Server.hpp
lab3/server/src/: Server.cpp
lab3/subprocesses/compiler/include/: CompilerWorker.hpp
lab3/subprocesses/compiler/src/: CompilerWorker.cpp  main.cpp
lab3/subprocesses/sticks_game/include/: GameWorker.hpp
lab3/subprocesses/sticks_game/src/: GameWorker.cpp  main.cpp
lab3/utils/exceptions/include/: Exceptions.hpp
lab3/utils/logger/include/: Logger.h
lab3/utils/tcp/client/include/: TCPClient.hpp
lab3/utils/tcp/client/src/: TCPClient.cpp
lab3/utils/thread_safe_queue/src/: ThreadSafeQueue.cpp
utility/: error_handler.c  error_handler.h
utility/arrays/: array.c
(+3 files in other folders)
